<resources>
    <string name="app_name">TosPowerCal</string>
    <string name="fgmCal_dialogSetMaxEnergyTitle">Please enter the max Energy</string>
    <string name="fgmCal_dialogTitle1">Add alarm</string>
    <string name="fgmCal_dialogTitle2">"Add "</string>
    <string name="fgmCal_dialogTitle3">" to alarm clock"</string>
    <string name="fgmCal_dialogWrong1">"This time has passed! "</string>
    <string name="fgmCal_dialogSetDone">Done!</string>
    <string name="fgmCal_dialogWrong2">Already have same alarm!</string>
    <string name="cancel">Cancel</string>
    <string name="fgmCal_isDone">Calculating complete!</string>
    <string name="fgmCal_Wrong1">Wrong!Please reset</string>
    <string name="cleanDone">All alarm were cleaned</string>
    <string name="fgmAla_vibrateOn">Vivrate On</string>
    <string name="fgmAla_vibrateOff">Vibrate Off</string>
    <string name="fgmAla_voiceOn">Sound On</string>
    <string name="fgmAla_voiceOff">Sound Off</string>
    <string name="fgmAla_dialogTitle1">Alarm claen</string>
    <string name="fgmAla_dialogMsg1">Do you realy want claen all plan?</string>
    <string name="fgmAla_dialogTitle2">Delete plan</string>
    <string name="fgmAla_dialogMsg2">"Delete "</string>
    <string name="fgmAla_dialogMsg3">\?</string>
    <string name="fgmAcc_settingLanguageTitle">Language setting</string>
    <string name="languageSetAuto">Auto</string>
    <string name="fgmAcc_layout_title">Setting</string>
    <string name="fgmAla_layout_title">Plan</string>
    <string name="fgmAla_layout_btn1">Refresh</string>
    <string name="fgmAla_layout_tv3">Vibrate</string>
    <string name="fgmAla_layout_togBtnOn">On</string>
    <string name="fgmAla_layout_togBtnOff">Off</string>
    <string name="fgmAla_layout_tv4">Sound</string>
    <string name="fgmAla_layout_btn2">Clean plan</string>
    <string name="fgmCal_layout_tv1">Now energy</string>
    <string name="fgmCal_layout_tv2">Max Energy</string>
    <string name="fgmCal_layout_btn1">Energy set</string>
    <string name="fgmCal_layout_btn2">Reset</string>
    <string name="fgmCal_layout_tv5">Energy</string>
    <string name="energy">Energy</string>
    <string name="time">Time</string>
    <string name="determine">Determine</string>
    <string name="English">English</string>
    <string name="TraditionalChinese">TraditionalChinese</string>
    <string name="SimplifiedChinese">SimplifiedChinese</string>
    <string name="author">Author:puppy1856</string>
    <string name="my_github">My GitHub</string>
    <string name="energycal">EnergyCal</string>
    <string name="alarm">Alarm</string>
    <string name="setting">Setting</string>
    <string name="fgmAcc_appNameTitle">OpenApp</string>
    <string name="apkName">Apk Version</string>
    <string name="googlePlayName">GooglePlay Version</string>
    <string name="openAppSettingWrong">version is not install,please recheck!</string>
</resources>
