<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.55"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B5B5B5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fgmAla_layout_title"
                android:textColor="#000000"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/fgmAla_btn_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="@string/fgmAla_layout_btn1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/energy"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fgmAla_refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <ListView
            android:id="@+id/fgmAla_listV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="#B5B5B5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B5B5B5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fgmAla_layout_tv3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"/>

            <ToggleButton
                android:id="@+id/fgmAla_togBtn_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="@string/fgmAla_layout_togBtnOn"
                android:textOn="@string/fgmAla_layout_togBtnOff"
                android:textSize="23sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B5B5B5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fgmAla_layout_tv4"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"/>

            <ToggleButton
                android:id="@+id/fgmAla_togBtn_voice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="@string/fgmAla_layout_togBtnOn"
                android:textOn="@string/fgmAla_layout_togBtnOff"
                android:textSize="23sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/fgmAla_btn_claen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/fgmAla_layout_btn2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"/>

    </LinearLayout>

</LinearLayout>