<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:background="#B5B5B5"
        android:text="@string/fgmAcc_appNameTitle"
        android:textColor="#000000"
        android:textSize="30sp"/>

    <RadioGroup
        android:id="@+id/fgmAcc_openApp_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
        android:layout_width="456dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:visibility="invisible"/>

        <RadioButton
            android:id="@+id/fgmAcc_openAPP_radiobtnDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textSize="25sp"/>
        <TextView
        android:layout_width="456dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:visibility="invisible"/>

        <RadioButton
            android:id="@+id/fgmAcc_openAPP_radiobtnApk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/apkName"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="456dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:visibility="invisible"/>

        <RadioButton
            android:id="@+id/fgmAcc_openAPP_radiobtnGooglePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/googlePlayName"
            android:textSize="25sp"/>

    </RadioGroup>
</LinearLayout>