<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B5B5B5"
            android:text="@string/fgmAcc_layout_title"
            android:textColor="#000000"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:orientation="vertical">

        <ListView
            android:id="@+id/fgmAcc_listV_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_foreground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Version 1.0.2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/fgmAcc_btn_bitgub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_github"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>