<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B5B5B5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/fgmCal_layout_tv1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fgmCal_tv_nowPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B5B5B5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/fgmCal_layout_tv2"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/fgmCal_tv_maxPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                         xmlns:app="http://schemas.android.com/apk/res-auto"
                                                         xmlns:tools="http://schemas.android.com/tools"
                                                         android:id="@+id/show"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:background="#B5B5B5"
                                                         android:layout_weight="1">

                <Button
                    android:id="@+id/fgmCal_btn_powerSet"
                    android:layout_width="97dp"
                    android:layout_height="42dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_style"
                    android:text="@string/fgmCal_layout_btn1"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fgmCal_tv_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textColor="#000000"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

                <com.xw.repo.BubbleSeekBar
                    android:id="@+id/fgmCal_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:bsb_max="100"
                    app:bsb_min="0"
                    app:bsb_progress="0"
                    app:bsb_second_track_color="@color/colorPrimaryDark"
                    app:bsb_track_size="6dp"/>

                <TextView
                    android:id="@+id/fgmCal_tv_maxPowerSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fgmCal_btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/fgmCal_layout_btn2"
                    android:textColor="#FFFFFF"/>

                <Button
                    android:id="@+id/fgmCal_btn_determine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/determine"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"

                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#B5B5B5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fgmCal_tv_listVTimeT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/fgmCal_tv_listVPowerT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/energy"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:visibility="invisible"/>
        </LinearLayout>

        <ListView
            android:id="@+id/fgmCal_listV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>